Changelog
=========

1.31 - Unreleased
-----------------

* More info when svn cannot switch because of dirty checkout.
  [gotcha]

1.30 - 2014-03-14
-----------------

* Fix regression from 1.29.
  [Trii (Josh Johnston)]


1.29 - 2014-03-14
-----------------

* Preserve order of eggs specified in ``develop`` option.
  [anjos (André Anjos)]


1.28 - 2014-01-23
-----------------

* Mercurial now checks if working copy is ahead of remote branch.
  [rafaelbco]

1.27 - 2014-01-10
-----------------

* Fix encoding issues during installation if the default encoding isn't
  properly set. Fixes issue #127
  [fschulze, jajadinimueter]

* Fix error message when listing of git branches fails. Fixes issue #124
  [toutpt (JeanMichel FRANCOIS), fschulze]

1.26 - 2013-09-10
-----------------

* Fixed branch option for git 1.6.0 until and including 1.6.2.
  Fixes issue #117.
  [maurits]

* Skip update of symlinked sources.
  [chaoflow (Florian Friesdorf)]

* Deprecate ``-n`` and ``--dry-run`` on ``rebuild`` command in favour of the
  new ``arguments`` command.

1.25 - 2013-03-15
-----------------

* Git submodules support.
  [sunbit]

* Added `newest_tag` option for mercurial and cvs.
  [kkujawinski, fschulze]

* Python 3 fixes.
  [fschulze, jajadinimueter (Florian Mueller)]

* Fix revision pinning. Refs #113
  [do3cc (Patrick Gerken)]

* Properly line up the output of ``status``.
  [fschulze]

1.24 - 2013-01-29
-----------------

* Mercurial now switches branches.
  [bubenkoff (Anatoly Bubenkov), fschulze]

* Fix gitsvn/gitify working copy type which was broken since 1.22.
  [rpatterson (Ross Patterson)]

* Fix deactivate command which was broken since 1.22. Refs #105
  [fschulze, icemac]

1.23 - 2012-11-28
-----------------

* Unit tests run with Python 2.4, 2.5, 2.6, 2.7 and 3.2 now.
  [fschulze]

* Officially added source rewrites. Refs #56
  [fschulze]

* Add additional optional config file ``.mr.developer-options.cfg`` which is