@@ -6,5 +6,6 @@ python:
   - "3.3"
 install:
   - easy_install -U setuptools
+  - easy_install -U py
   - ./bootstrap.sh
 script: ./test.sh
