@@ -1,18 +1,11 @@
 from subprocess import Popen, PIPE
+from mr.developer.compat import s
 import os
 import shutil
 import sys
 import tempfile
 import threading
 import unittest
-
-
-if sys.version_info < (3, 0):
-    b = lambda x: x
-    s = lambda x: x
-else:
-    b = lambda x: x.encode('ascii')
-    s = lambda x: x.decode('ascii')
 
 
 def tee(process, filter_func):
